--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,6 +22,10 @@ RentCompose.notFound=Состав аренды не найден
 Repair.notFound=Ремонт не найден
 Request.notFound=Заявка не найдена
 
+# Error
+User.Access.Denied=Вы не имеете доступа в эту систему
+User.Bad.Credentials=Неверные имя пользователя или пароль
+
 # CreateBikeDto
 NotNull.createBikeDto.modelBikeId=Модель велосипеда обязательна для заполнения
 NotNull.createBikeDto.seqNumber=Порядковый номер обязателен для заполнения
