--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,6 +26,7 @@ Request.notFound=Заявка не найдена
 User.Access.Denied=Вы не имеете доступа в эту систему
 User.Bad.Credentials=Неверные имя пользователя или пароль
 Code.isExpired=Код не действителен
+Code.username.notFound=Логин не найден
 
 # CreateBikeDto
 NotNull.createBikeDto.modelBikeId=Модель велосипеда обязательна для заполнения
