--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -268,3 +268,8 @@ NotNull.updatePasswordByCodeExternalDto.code=Вставьте код
 NotBlank.updatePasswordInternalDto.username=Логин обязателен для заполнения
 NotNull.updateInternalUserDto.id=ID обязателен для заполнения
 NotBlank.updateInternalUserDto.username=Логин обязателен для заполнения
+
+# Code
+NotBlank.createAuthenticationCodeDto.username=Логин обязателен для заполнения
+NotBlank.createAuthenticationCodeDto.password=Пароль обязателен для заполнения
+NotNull.completeAuthenticationCodeDto.code=Код обязателен для заполнения
